AWS CloudFormation/ec2.yaml
AWSTemplateFormatVersion: '2010-09-09'
Parameters:
  PublicSubnetId:
    Type: String
  PrivateSubnetId:
    Type: String
  VPCId:
    Type: String

Resources:
  PublicEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      SubnetId: !Ref PublicSubnetId
      SecurityGroupIds:
        - !Ref PublicSecurityGroup
      KeyName: testkeypair
      ImageId: ami-0ebfd941bbafe70c6
      Tags:
        - Key: Name
          Value: idk-test-public-ec2

  PrivateEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      SubnetId: !Ref PrivateSubnetId
      SecurityGroupIds:
        - !Ref PrivateSecurityGroup
      KeyName: testkeypair
      ImageId: ami-0ebfd941bbafe70c6
      Tags:
        - Key: Name
          Value: idk-test-private-ec2

  PublicSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH access from specific IP
      VpcId: !Ref VPCId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 14.186.87.128/32  # Replace with your IP

  PrivateSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH access from Public instance
      VpcId: !Ref VPCId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          SourceSecurityGroupId: !Ref PublicSecurityGroup

Outputs:
  PublicEC2InstanceId:
    Value: !Ref PublicEC2Instance
  PrivateEC2InstanceId:
    Value: !Ref PrivateEC2Instance
